# aspect-cli

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  extensions.bzl  go.bzl  go.mod  go.sum  repositories.bzl
cmd/resolvedump/: BUILD.bazel  resolvedump.go
gazelle/: BUILD.bazel  gazelle.bzl
gazelle/bzl/: BUILD.bazel
gazelle/common/: BUILD.bazel  rules.go  set.go  walk.go
gazelle/common/git/: BUILD.bazel  gitignore.go  gitignore_test.go
gazelle/common/starlark/: BUILD.bazel  eval.go  glob.go
gazelle/common/starlark/stdlib/: BUILD.bazel  path.go
gazelle/common/starlark/utils/: BUILD.bazel
gazelle/common/treesitter/: BUILD.bazel  parser.go  queries.go
gazelle/common/treesitter/grammars/json/: BUILD.bazel
gazelle/common/treesitter/grammars/kotlin/: BUILD.bazel
gazelle/common/treesitter/grammars/starlark/: BUILD.bazel
gazelle/common/treesitter/grammars/tsx/: BUILD.bazel
gazelle/common/treesitter/grammars/typescript/: BUILD.bazel
gazelle/js/: BUILD.bazel  README.md  config.go  configure.go  generate.go  language.go  resolve.go
gazelle/js/node/: BUILD.bazel  package.go
gazelle/js/parser/: BUILD.bazel  parser.go
gazelle/js/pnpm/: BUILD.bazel
gazelle/js/proto/: BUILD.bazel
gazelle/js/typescript/: BUILD.bazel  config.go  tsconfig.go
gazelle/kotlin/: BUILD.bazel  configure.go  generate.go  imports.go  kotlin.go  kotlin_test.go  language.go  resolver.go
gazelle/kotlin/kotlinconfig/: BUILD.bazel  config.go
gazelle/kotlin/parser/: BUILD.bazel  parser.go  parser_test.go
gazelle/kotlin/tests/competing_targets/: BUILD.out  something.kt
gazelle/kotlin/tests/competing_targets/component/: BUILD.in
gazelle/kotlin/tests/kotlin_parser_tricky_cases/: BUILD.out  WORKSPACE  something.kt
gazelle/kotlin/tests/local_deps/: root.kt
gazelle/kotlin/tests/rules_conflicting_name/: expectedStderr.txt
gazelle/kotlin/tests/rules_conflicting_name_mapped_kind/: expectedStderr.txt
gazelle/kotlin/tests/rules_jvm-maven/src/main/java/com/example/deepimport/: DeepImport.kt
gazelle/kotlin/tests/rules_jvm-maven/src/test/java/com/example/myproject/: BUILD.out
gazelle/kotlin/tests/simple_file_bzlmod/: BUILD.out  MODULE.bazel
gazelle/kotlin/tests/test_targets/: BUILD.in  BUILD.out
gazelle/kotlin/tests/test_targets/src/main/xyz/foo/: BUILD.out  Calculator.kt
gazelle/kotlin/tests/test_targets/src/test/xyz/foo/: BUILD.out  CalculatorTest.kt
gazelle/kotlin/tests/unknown_imports/: expectedStdout.txt
gazelle/python/: BUILD.bazel
internal/logger/: BUILD.bazel  logger.go
tools/: gopackagesdriver.sh
