load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")

# gazelle:prefix aspect.build/gazelle
# gazelle:resolve go github.com/bazelbuild/buildtools/edit @com_github_bazelbuild_buildtools//edit:go_default_library
# gazelle:resolve go github.com/bazelbuild/buildtools/build @com_github_bazelbuild_buildtools//build:go_default_library

# gazelle-TODO:
#   cannot use :map_kind go_proto_library go_proto_library //:go_proto_library.bzl
#   because we need gazelle to understand the built-in kind, see https://github.com/bazelbuild/bazel-gazelle/issues/1162
#   so instead we are using the aspect-build/rules_go fork which has our write_source_files feature
gazelle(name = "gazelle")

# gazelle(
#     name = "gazelle_update_repos",
#     args = [
#         "-build_file_proto_mode=disable_global",
#         "-from_file=go.mod",
#         "-to_macro=go.bzl%deps",
#         "-prune",
#     ],
#     command = "update-repos",
# )
