module(
    name = "gazelle_kotlin",
    version = "0.0.1",
)

bazel_dep(name = "gazelle", version = "0.39.0")
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.9.1")
bazel_dep(name = "platforms", version = "0.0.10")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bazel_contrib_rules_jvm", "com_github_bazelbuild_buildtools", "com_github_bazelbuild_rules_python_gazelle", "com_github_bmatcuk_doublestar_v4", "com_github_emirpasic_gods", "com_github_go_git_go_git_v5", "com_github_masterminds_semver_v3", "com_github_msolo_jsonr", "com_github_rs_zerolog", "com_github_smacker_go_tree_sitter", "com_github_yargevad_filepathx", "in_gopkg_yaml_v3", "net_starlark_go")

# All *direct* Go dependencies of the module have to be listed explicitly.
#use_repo(
#    go_deps,
#    "build_aspect_cli",
#)

non_module_dependencies = use_extension("//:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "tree-sitter-kotlin")