module(
    name = "gazelle_kotlin",
    version = "0.0.1",
)

bazel_dep(name = "gazelle", version = "0.39.0")
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.9.1")
bazel_dep(name = "platforms", version = "0.0.10")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bazel_contrib_rules_jvm", "com_github_bazelbuild_buildtools", "com_github_emirpasic_gods", "com_github_go_git_go_git_v5", "com_github_google_go_cmp", "com_github_goreleaser_fileglob", "com_github_rs_zerolog", "com_github_smacker_go_tree_sitter", "com_github_yargevad_filepathx", "net_starlark_go")
go_deps.archive_override(
    path = "github.com/smacker/go-tree-sitter",
    sha256 = "9993a4c3e2217a981ec5341a72d8900c38a2a1a4b0a9e13d75ddbd64ad04016c",
    strip_prefix = "go-tree-sitter-bc2725495ca964c487d429a57841811fadd251fe",
    urls = ["https://github.com/reddaly/go-tree-sitter/archive/bc2725495ca964c487d429a57841811fadd251fe.zip"],
)

# go_deps.archive_override(
#     path = "github.com/bazel-contrib/rules_jvm",
#     sha256 = "855a528d5231aa6cfa2d5bd7a2343f601a468f7af9671eecb091b0c540ce034c",
#     urls = ["http://localhost:8674/by-sha256/855a528d5231aa6cfa2d5bd7a2343f601a468f7af9671eecb091b0c540ce034c.zip"],
# )

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.23.1")

non_module_dependencies = use_extension("//:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "tree-sitter-kotlin")
