load("@gazelle//:def.bzl", "gazelle_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//gazelle:gazelle.bzl", "gazelle_generation_test")

# gazelle:exclude tests/
go_library(
    name = "bzl",
    srcs = ["gazelle.go"],
    importpath = "aspect.build/gazelle/gazelle/bzl",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@gazelle//config:go_default_library",
        "@gazelle//label:go_default_library",
        "@gazelle//language:go_default_library",
        "@gazelle//pathtools:go_default_library",
        "@gazelle//repo:go_default_library",
        "@gazelle//resolve:go_default_library",
        "@gazelle//rule:go_default_library",
    ],
)

# Internal only for tests
gazelle_binary(
    name = "gazelle_bzl_binary",
    languages = [
        "@gazelle//language/proto:go_default_library",
        ":bzl",
    ],
    visibility = ["//visibility:private"],
)

# A separate generation test for each tests/* test case
[
    gazelle_generation_test(
        name = "%s_test" % test_workspace.replace("/WORKSPACE", "").replace("tests/", ""),
        dir = test_workspace.replace("/WORKSPACE", ""),
        gazelle_binary = "gazelle_bzl_binary",
    )
    for test_workspace in glob(["tests/**/WORKSPACE"])
]
