load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "common",
    srcs = [
        "bazel.go",
        "directives.go",
        "regex.go",
        "rules.go",
        "set.go",
        "walk.go",
    ],
    importpath = "aspect.build/gazelle/gazelle/common",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/logger",
        "@com_github_emirpasic_gods//sets/treeset",
        "@com_github_emirpasic_gods//utils",
        "@gazelle//config:go_default_library",
        "@gazelle//label:go_default_library",
        "@gazelle//language:go_default_library",
        "@gazelle//rule:go_default_library",
    ],
)
