load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "git",
    srcs = ["gitignore.go"],
    importpath = "aspect.build/gazelle/gazelle/common/git",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/logger",
        "@com_github_go_git_go_git_v5//plumbing/format/gitignore",
        "@gazelle//config:go_default_library",
    ],
)

go_test(
    name = "git_test",
    srcs = ["gitignore_test.go"],
    embed = [":git"],
    deps = ["@gazelle//config:go_default_library"],
)
