load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "treesitter",
    srcs = [
        "filters.go",
        "parser.go",
        "queries.go",
        "traversal.go",
    ],
    importpath = "aspect.build/gazelle/gazelle/common/treesitter",
    visibility = ["//visibility:public"],
    deps = [
        "//gazelle/common/treesitter/grammars/kotlin",
        "//internal/logger",
        "@com_github_smacker_go_tree_sitter//:go-tree-sitter",
    ],
)
