load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "proto",
    srcs = ["proto.go"],
    importpath = "aspect.build/gazelle/gazelle/js/proto",
    visibility = ["//visibility:public"],
    deps = [
        "@gazelle//language:go_default_library",
        "@gazelle//language/proto:go_default_library",
        "@gazelle//rule:go_default_library",
    ],
)
