load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = ["parser.go"],
    importpath = "aspect.build/gazelle/gazelle/kotlin/parser",
    visibility = ["//visibility:public"],
    deps = [
        "//gazelle/common/treesitter",
        "@com_github_smacker_go_tree_sitter//:go-tree-sitter",
    ],
)

go_test(
    name = "parser_test",
    size = "small",
    srcs = ["parser_test.go"],
    embed = [":parser"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
